# cargo-dragons

./: .gitignore  Cargo.toml  Changelog.md  README.md  Readme.md  rust-toolchain.toml
src/: cli.rs  main.rs  tests.rs  util.rs
src/commands/: add_owner.rs  check.rs  check_independence.rs  clean_deps.rs  mod.rs  readme.rs  release.rs  rename.rs  to_release.rs  unifydeps.rs  version.rs
tests/: check.rs  version_bumps.rs
tests/fixtures/include-pre/: Cargo.toml
tests/fixtures/include-pre/cu-left-pad/: Cargo.toml
tests/fixtures/include-pre/unicode-width/: Cargo.toml
tests/fixtures/simple-base/: Cargo.toml
tests/fixtures/simple-base/crateA/: Cargo.toml
tests/fixtures/simple-base/crateB/: Cargo.toml
tests/fixtures/simple-base/crateC/: Cargo.toml
