[package]
name = "cargo-dragons"
version = "1.0.0-alpha.dev"
authors = [
  "Benjamin Kampmann <ben@gnunicorn.org>",
  "Bernhard Schuster <bernhard@ahoi.io>",
]
edition = "2021"
rust-version = "1.56.1"
license = "GPL-3.0"
repository = "https://github.com/drahnr/cargo-dragons"
description = "Tooling to manage releasing of crates in massiv workspaces/monorepos"
readme = "Readme.md"
keywords = ["cargo", "publishing", "dragons", "workspaces", "monorepo"]
categories = ["development-tools", "development-tools::cargo-plugins"]

exclude = [".gitignore", ".github/**"]

[[bin]]
name = "cargo-dragons"
path = "src/main.rs"

[features]
default = []
gen-readme = ["cargo-readme", "lazy_static", "sha1"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap-verbosity-flag = "2"

toml_edit = "0.19"
log = "0.4.17"
pretty_env_logger = "0.5"
petgraph = "0.6"
regex = "1.4.1"
anyhow = "1"
itertools = "0.11"

# CARGO VERSION BOUND dependencies
cargo = "0.72"
flate2 = "1.0.24"
git2 = "0.17"
semver = "1.0.13"
tar = "0.4.38"

# Optional dependencies
cargo-readme = { version = "3.2", optional = true }
lazy_static = { version = "1.4", optional = true }
sha1 = { version = "0.10", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3"
toml = "0.7"
assert_matches = "1"
